2006-02-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Prerequisite Macros): State more precisely
	where a required macro will be expanded.
	(Coding Style): Another reason not to use `m4_define'.

2006-02-21  Eric Blake  <ebb9@byu.net>

	* lib/autoconf/general.m4 (_AC_LIBOBJ): Minor optimization.

2006-02-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Looping constructs): New node, to
	document m4_for, m4_foreach, m4_foreach_w, and mention
	obsolete AC_FOREACH.
	(Obsolete Macros): Document AC_FOREACH.
	* lib/m4sugar/m4sugar.m4 (_m4_for): Fix declaration comment.
	(m4_for): Fix to never loop (almost) endlessly, work correctly
	with arithmetic expressions in arguments, a step of zero or
	non-integer multiple of the interval, and avoid integer
	overflow.
	* tests/m4sugar.at: New test for m4_for, m4_foreach, and
	m4_foreach_w.

2006-02-20  Romain Lenglet  <rlenglet@users.forge.objectweb.org>

	Add basic support for Erlang, both for configuring Erlang/OTP
	tools, and Erlang as a conf test language.
	* lib/autoconf/erlang.m4: New file.
	* lib/autoconf/autoconf.m4: Add erlang.m4.
	* lib/autoconf/Makefile.am (dist_autoconflib_DATA): Likewise.
	* lib/freeze.mk (autoconf_m4f_dependencies): Likewise.
	* NEWS: Add short description of new macros.
	* THANKS: Add Romain Lenglet.

2006-02-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Shellology) <pdksh>: Document that pdksh as
	native /bin/sh may not set KSH_VERSION (seen on OpenBSD).

2006-02-15  Eric Blake  <ebb9@byu.net>

	* lib/autoconf/general.m4 (AC_CHECK_DECL): Avoid unused variable
	warning.

2006-02-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/m4sugar/m4sh.m4 (AS_CASE): New macro.
	(_AS_CASE): Private helper macro.
	* tests/m4sh.at: Basic tests for AS_IF and AS_CASE.
	* doc/autoconf.texi (Programming in M4sh): Document AS_CASE.
	Fix syntax of AS_IF description
	(Prerequisite Macros): Mention AS_IF and AS_CASE as workarounds